Updates to about, contributor, and partners pages

--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -59,6 +59,15 @@ img {
   max-width: 100%;
 }
 
+.partners-page {
+  img {
+    width: auto;
+    max-height: 60px;
+    max-width: 100px;
+    margin: .25em 1em;
+  }
+}
+
 .partners {
   text-align: center;
 
