--- a/app/views/catalog/_universal_viewer_default.html.erb
+++ b/app/views/catalog/_universal_viewer_default.html.erb
@@ -3,9 +3,9 @@
     <div class="col-md-3">
       <ul class="nav nav-pills nav-stacked" id="manifest-tabs">
         <% document.books.to_a.each_with_index do |book, b_index| %>
-          <% book.versions.to_a.each_with_index do |version, v_index| %>
+          <% book.versions.uniq(:owner_system_number).to_a.each_with_index do |version, v_index| %>
             <li data-version-id="version_<%= version.id %>" <%= 'class="active"'.html_safe if (b_index == 0 && v_index ==0) %>>
-              <a href="#" data-manifest-uri='<%= version.manifest %>'>
+              <a href="#" data-manifest-uri='<%= version.decorate.manifest_url %>'>
                 <%= version.based_on_original? ? 'Microfiche' : 'Matching Copy' %> (<%= book.digital_cico_number %>)<br/>
                 <span class="contrib"><%= version.contributing_library.label %></span>
               </a>
