Metadata checklist updates from Anne Rana and Roger Lawson

--- a/app/views/pages/checklist.html.erb
+++ b/app/views/pages/checklist.html.erb
@@ -53,6 +53,7 @@
           <td>
             <div>856 41 $u [Manifest URI]</div>
             <div>$q JSON (IIIF Manifest)</div>
+            <div>$3 [vol/copy num]</div>
           </td>
           <td>
             <div>&lt;relatedItem type="otherFormat"&gt;</div>
@@ -102,6 +103,7 @@
     </table>
     <h3>IIIF Manifest</h3>
     <p>
+      Please note: In order to display properly, IIIF manifests must be hosted on servers that support https.
       Fields to include in the
       <%= link_to "International Image Interoperability Framework (IIIF)", "https://iiif.io"%>
       manifest:
@@ -113,6 +115,7 @@
       <li>Title</li>
       <li>Place of publication</li>
       <li>Year of publication</li>
+      <li>Volume or copy information</li>
       <li>Attribution or credit line of holding institution</li>
       <li>Shelf mark of holding institution</li>
       <li>Link to the digitized copy (DOI, URL, URN)</li>
