Views updated in my local environment, probably as a result of running one the rake tasks indicated in the README to get started, but not really sure.

--- a/app/views/pages/catalogo/section_2.5.html
+++ b/app/views/pages/catalogo/section_2.5.html
@@ -4267,7 +4267,9 @@ pubblicata la prima edizione di Roma.</div>
                   <li id="item_3031" class="catalogo-item">
                      <span class="catalogo-item-label">3031.</span> 
                   <span class="catalogo-bibl">
-                     <span class="catalogo-author">VAILLANT Joannis Foj</span>, Numismata imperatorum romanorum praestan <span class="catalogo-pb" id="page_89">89</span> iora a Julio Cesare ad postumum
+                     <span class="catalogo-author">VAILLANT Joannis Foj</span>, <span class="catalogo-title">
+                        <a class="catalog-link" href="/catalog/3031">Numismata imperatorum romanorum praestan <span class="catalogo-pb" id="page_89">89</span> iora a Julio Cesare ad postumum</a>
+                     </span>
 usque. Editio prima romana plurimis nummis aucta, cui accessit appendix a postumo ad Costantinum magnum,
 Romae 1743, in 4, fig., vol. 3.
 Giovan Francesco Baldini imprese di aumentare, correggere, ampliare quest’opera e la riprodusse in maniera da
