--- a/app/views/pages/catalogo/_item_3031.html
+++ b/app/views/pages/catalogo/_item_3031.html
@@ -1,5 +1,5 @@
 <section xmlns="http://www.w3.org/1999/xhtml" class="catalogo-item" id="3031">
-                     <span class="catalogo-item-label">3031.</span> <span class="catalogo-bibl"><span class="catalogo-author">VAILLANT Joannis Foj</span>, Numismata imperatorum romanorum praestan <span class="catalogo-pb" id="page_89">89</span> iora a Julio Cesare ad postumum
+                     <span class="catalogo-item-label">3031.</span> <span class="catalogo-bibl"><span class="catalogo-author">VAILLANT Joannis Foj</span>, <span class="catalogo-title"><a class="catalog-link" href="/catalog/3031">Numismata imperatorum romanorum praestan <span class="catalogo-pb" id="page_89">89</span> iora a Julio Cesare ad postumum</a></span>
 usque. Editio prima romana plurimis nummis aucta, cui accessit appendix a postumo ad Costantinum magnum,
 Romae 1743, in 4, fig., vol. 3.
 Giovan Francesco Baldini imprese di aumentare, correggere, ampliare quest’opera e la riprodusse in maniera da
