First pass for thumbnail display

--- a/app/assets/stylesheets/components/_section.scss
+++ b/app/assets/stylesheets/components/_section.scss
@@ -1,7 +1,13 @@
 section {
   width: 100%;
-  display: inline-block;
+  display: block;
   position: relative;
+  padding: 20px;
+}
+
+.thumbnail {
+  float: right;
+  width: 150px;
 }
 
 .wrap {
