--- a/app/views/catalog/_item_partial_default.html.erb
+++ b/app/views/catalog/_item_partial_default.html.erb
@@ -1,1 +1,2 @@
+<%= render_thumbnail(document.manifests.first, document.id) if document.manifests.present? %>
 <%= render "pages/catalogo/item_#{document.id}" %>
