--- a/app/views/pages/catalogo/_item_35.html
+++ b/app/views/pages/catalogo/_item_35.html
@@ -1,11 +1,11 @@
 <section xmlns="http://www.w3.org/1999/xhtml" class="catalogo-item" id="35">
-                  <span class="catalogo-item-label">35.</span> 
-                  <span class="catalogo-bibl">
-                     <span class="catalogo-author">GHIBERTI (Lorenzo)</span>,
-                     <span class="catalogo-title"><a class="catalog-link" href="/catalog/35"> Commentario inedito sulle arti estratto da manoscritti della
-	  Magliabechiana e pubblicato nel volume secondo della Storia della scultura di L. Cicognara,</a></span>
-	                    <span class="catalogo-pubPlace">Venezia</span> 
-                     <span class="catalogo-date">1805,</span>
-                     <span class="catalogo-extent"> in 8, M. 36.</span>
-                  </span>
-               </section>
+          <span class="catalogo-item-label">35.</span>
+          <span class="catalogo-bibl">
+            <span class="catalogo-author">GHIBERTI (Lorenzo)</span>,
+            <span class="catalogo-title"><a class="catalog-link" href="/catalog/35"> Commentario inedito sulle arti estratto da manoscritti della Magliabechiana e pubblicato nel volume secondo della
+            Storia della scultura di L. Cicognara,</a></span>
+	        <span class="catalogo-pubPlace">Venezia</span>
+            <span class="catalogo-date">1805,</span>
+            <span class="catalogo-extent"> in 8, M. 36.</span>
+            </span>
+          </section>
