--- a/app/views/shared/_user_util_links.html.erb
+++ b/app/views/shared/_user_util_links.html.erb
@@ -1,12 +1,12 @@
 <div class="navbar-right">
   <ul class="nav navbar-nav">
     <li><%= link_to 'About', static_page_path('about') %></li>
+    <li class="banner"><%= link_to 'Partners', static_page_path('partners'), class: 'banner' %></li>
     <li class="dropdown">
       <%= content_tag :a, class: 'dropdown-toggle', id: "community-menu", "data-toggle" => "dropdown" do %>
         Community <span class="caret"></span>
       <% end %>
       <ul class="dropdown-menu" id="community-menu">
-        <li><%= link_to 'Partners', static_page_path('partners') %></li>
         <li><%= link_to 'Become a Contributor', static_page_path('contributor') %></li>
         <li><%= link_to 'Contributor FAQs', static_page_path('faq') %></li>
         <li><%= link_to 'Metadata Checklist', static_page_path('checklist') %></li>
