--- a/app/assets/stylesheets/components/_results.scss
+++ b/app/assets/stylesheets/components/_results.scss
@@ -37,8 +37,8 @@
   padding: 0;
 }
 
-.catalogo-note, .catalogo-note p {
-
+.catalogo-note,
+.catalogo-note p {
 }
 .catalogo-note {
   font-family: $sans-serif;
