--- a/app/assets/stylesheets/components/_results.scss
+++ b/app/assets/stylesheets/components/_results.scss
@@ -70,8 +70,11 @@
   font-size: 14px;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
+  font-style: normal;
   quotes: "“" "”" "‘" "’";
   p {
+    font-family: $sans-serif;
+    font-size: 14px;
     line-height: 1.5em;
     padding: 0 15px;
     margin: 10px 0 5px;
@@ -82,7 +85,7 @@
 .catalogo-note-search-results:after {
   color: $medium-gray;
   font-size: 4em;
-  line-height: 0.1em;
+  line-height: 20px;
   vertical-align: -0.4em;
 }
 
@@ -104,4 +107,8 @@
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   overflow: hidden;
+}
+
+.invisible {
+  display: none;
 }
