--- a/app/views/pages/catalogo/section_1.13.html
+++ b/app/views/pages/catalogo/section_1.13.html
@@ -14,6 +14,8 @@
                                   Table of Contents
                                 </h2>
             </div>
+            <a class="btn btn-primary vatican-catalogo"
+               href="https://digi.vatlib.it/view/STP_Riserva.IV.169(1)">Vatican Annotated Catalogo</a>
             <div id="facet-panel-collapse"
                  class="collapse panel-group"
                  data-spy="affix"
