--- a/app/views/shared/_front_header.html.erb
+++ b/app/views/shared/_front_header.html.erb
@@ -8,6 +8,7 @@
             Community <span class="caret"></span>
           <% end %>
           <ul class="dropdown-menu banner" id="community-menu">
+            <li><%= link_to 'Research', static_page_path('research') %></li>
             <li><%= link_to 'Become a Contributor', static_page_path('contributor') %></li>
             <li><%= link_to 'Contributor FAQs', static_page_path('faq') %></li>
             <li><%= link_to 'Metadata Checklist', static_page_path('checklist') %></li>
